--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,14 @@
 
-
 services:
   fastapijenkins:
     image: fastapijenkins
+    build:
+      context: .
+      dockerfile: ./Dockerfile
     ports:
-      - "8988:8988"
+      - 8988:8988
     networks:
       - jenkins
-
 networks:
   jenkins:
     external: true
